made changes to other copy of dogplace

--- a/dogplace.html
+++ b/dogplace.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="dogplace.css">
+	<link rel="stylesheet" type="text/css" href="liberty.css">
 	<title>Dog Place -- Html 5 exercise</title>
 </head>
 
